<resources>
    <string name="app_name">Streamlined</string>
    <string name="todo">TODO</string>
    <string name="Streamlined">Streamlined</string>
    <string name="streamlined">Streamlined</string>
    <string name="social_media_management_tool">social media management tool</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="go">GO</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="phone_no">Phone No</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="signup_to_start_your_new_journey">SignUp to start your new Journey</string>
    <string name="welcome">Welcome,</string>
    <string name="update">UPDATE</string>
    <string name="e_mail">E-Mail</string>
    <string name="booking">Booking</string>
    <string name="_12">12</string>
    <string name="balance">Balance</string>
    <string name="_123">$123</string>
    <string name="Yahya_al_derzi">Yahya Al-Derzi</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_verification_code_if_not_automatically_authenticated">Enter verification code if not automatically authenticated.</string>
    <string name="verify_phone_no">Verify Phone No</string>
    <string name="yahya_al_derzi">Yahya Al-Derzi</string>
    <string name="_20">20</string>
    <string name="posts">Posts</string>
</resources>
