<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="update"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--First Section-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#EC7C30"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/profile_image"
                android:contentDescription="@string/todo" />


            <TextView
                android:id="@+id/fullname_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:fontFamily="@font/roboto_bold"
                android:includeFontPadding="false"
                android:text="@string/yahya_al_derzi"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/username_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fullname_field"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:includeFontPadding="false"
                android:text="@string/yahya_al_derzi"
                android:textSize="14sp" />

        </RelativeLayout>

        <!--Second Section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#EC7C30"
                app:cardElevation="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/booking"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/booking_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="@string/_20"
                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/booking_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/booking_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/posts"
                        android:textSize="20sp" />


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <!--Third Section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/username_small_icon"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/mail_small_icon"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_no_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone_small_icon"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password_icon_small"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#EC7C30"
                android:fontFamily="@font/roboto_bold"
                android:onClick="update"
                android:text="@string/update" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>